BUG: caanot get rid of horizontal scroll for mobile

--- a/client/css/stylesheet.css
+++ b/client/css/stylesheet.css
@@ -2,7 +2,7 @@ html {
   max-width: 100%;
 }
 
-body {
+body, html {
   overflow: hidden;
 }
 
@@ -87,6 +87,14 @@ h3.font-weight-bold {
 }
 
 @media (max-width: 575px) {
+  /* html, body {
+  overflow-x: hidden;
+  } */
+
+  /* body {
+  overflow: hidden;
+  } */
+
   h2 {
     font-size: 1.5em;
   }
@@ -134,6 +142,6 @@ h3.font-weight-bold {
   }
 
   .collapsed {
-    height: calc(100% - 525px);
+    height: calc(100% - 400px);
   }
 }
